--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "heap-local-storage",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Cache in HTML5 localStorage based on heap (priority queue)",
   "main": "lib/cache.js",
   "scripts": {
-    "test": "mocha --compilers js:babel/register -r test/mock-localstorage.js",
+    "test": "mocha --compilers js:babel/register -r mock-local-storage",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile"
   },
@@ -29,7 +29,8 @@
     "babel": "^5.0.9",
     "babel-core": "^5.1.8",
     "chai": "^2.2.0",
-    "mocha": "^2.2.1"
+    "mocha": "^2.2.1",
+    "mock-local-storage": "^1.0.0"
   },
   "dependencies": {
     "core-js": "^0.8.3",
